# Fan-project-control-table

./: README.md
Arduino/main/: main.ino
Arduino/parser/parser_code/: parser_code.ino
Arduino/pwmtest/: Adafruit library references.txt
Arduino/pwmtest/Test_pin3_0toMax/: Test_pin3_0toMax.ino
PC/: CMakeLists.txt
PC/src/: common_config.h  config.h  main.cpp
PC/src/Communication/: communication.cpp  communication.h
PC/src/Control/: control.cpp  control.h
PC/src/DebugUtils/: utils.cpp  utils.h
PC/src/ImageProcessing/: image_processing.cpp  image_processing.h
pwmtest/: Test_pin3_0toMax.ino
pwmtest/fan_control/fan_control/: fan_control.ino
pwmtest/pwmtest/pwmtest/: pwmtest.ino
pwmtest/pwmtest/pwmtest/pwmtest/: pwmtest.ino
